--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,13 +1,22 @@
 .characterEditor {
   padding-top: 128px;
   padding-bottom: 64px;
+  display: inline-block;
 }
 
+
 .maxWidthWrapper {
+  max-width: 1024px;
+  padding-left: 32px;
+  padding-right: 32px;
+  margin-left: auto;
+  margin-right: auto;
+  isolation: isolate;
 }
 
 .header {
   padding-bottom: 64px;
+  width: 65%;
 }
 
 .title {
@@ -24,7 +33,23 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  top: 100px;
+  left: 55%;
+  /* max-width: 35%; */
+  min-height: 500px;
+  height: 90%;
 }
 
-.controlColumn {
+.grayBox{
+  position: fixed;
+  top: 60%;
+  left: 0;
+  height: 40%;
+  background-color:  hsl(195deg, 20%, 86%);
+  width: 100%;
+}
+
+.controlColumn{
+  width: 50%;
 }
